@@ -1,7 +1,7 @@
 8f465d3ec1cba00a7d024a1964e74bb6d241f86a73c77d95d8ceb10d09c8f7b9  roms/CAT
 59f0502748af32e3096e026a95e77216179cccfe803a05803317414643e2fcec  roms/DEHEX
 3a4a15691297345ac808ce41fae26d5592cd09d759d2feef88c1ef262ddaa5b8  roms/forth
-4c146297da8c672955698a82207295b28feb389c9856a2c6ea6a60ce7e84260a  roms/lisp
+b386b0e08250421a4d7eb14817b4c3359aef52d7773b3667bb1caaa933cbfe66  roms/lisp
 2b9727381aec15a504c0898189fbc2344209d8e04451e3fa5d743e08e38f64cf  roms/M0
 24a4d74eb2eb7a82e68335643855658b27b5a6c3b13db473539f3e08d6f26ceb  roms/SET
 0a427b14020354d1c785f5f900677e0059fce8f8d4456e9c19e5528cb17101eb  roms/stage0_monitor
